@@ -162,10 +162,11 @@ $wgAutoloadLocalClasses = array(
 	'MediaWikiBagOStuff' => 'includes/BagOStuff.php',
 	'MediaWiki_I18N' => 'includes/SkinTemplate.php',
 	'MediaWiki' => 'includes/Wiki.php',
-	'memcached' => 'includes/memcached-client.php',
+	'MemCachedClientforWiki' => 'includes/memcached-client.php',
 	'MessageCache' => 'includes/MessageCache.php',
 	'MimeMagic' => 'includes/MimeMagic.php',
 	'MWException' => 'includes/Exception.php',
+	'MWMemcached' => 'includes/memcached-client.php',
 	'MWNamespace' => 'includes/Namespace.php',
 	'Namespace' => 'includes/NamespaceCompat.php', // Compat
 	'OldChangesList' => 'includes/ChangesList.php',
